--- a/sections/_footerSection.scss
+++ b/sections/_footerSection.scss
@@ -10,6 +10,7 @@
   &-paragraph {
     color: #fff;
     font-size: 1.8rem;
+    text-align: center;
   }
 
   &-link {
